--- a/index.html
+++ b/index.html
@@ -250,6 +250,7 @@
                   <br>
                   <div style="max-height: 200px; overflow-y: auto; border: 0.8px solid #ccc; padding: 10px;">
                       <ol>
+                          <li>25/11/2024 Dr. Quentin QIN gave a talk at “<a href="https://aging.hkust.edu.hk/events/research-back-back-seminar-series-6" target="_blank"> Research Back to Back Seminar Series</a>”, HKUST.</li>	
                           <li>21/10/2024 Our team member Kangdi LIU received the 2024/2025 Dr. Charles Chan Postgraduate Scholarship. Congrats!</li>	
                           <li>08/10/2024 Our preprint paper, “<a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4978553" target="_blank"> The Role of Prior Knowledge in Second-Language Learners’ Overnight Consolidation of Cantonese Tones</a>”, has been published on SSRN. Congrats!</li>	
                           <li>26/08/2024 Jeremy(Poster No. 30) and Yuqi(Poster No. 36) gave poster presentations at <a href="https://cogsci2024.hkust.edu.hk/" target="_blank"> CogSci 2024 Hong Kong Meetup</a>.</li>	
