--- a/media.html
+++ b/media.html
@@ -252,7 +252,7 @@
   		  </div>
    		 <div class="span9">
    		   <p><a href="https://aging.hkust.edu.hk/events/research-back-back-seminar-series-6" style="color: #515151;"><b>[Nov 2024] Research Back to Back Seminar Series</a></b></p>
-    		  <i><a href="https://aging.hkust.edu.hk/" style="color: #515151;">Center for Aging Science, HKUST</i>
+    		  <i><a href="https://aging.hkust.edu.hk/" style="color: #515151;">Center for Aging Science, HKUST</a></i>
     		 </div>
  		 </div>
 		 <hr>
