--- a/people.html
+++ b/people.html
@@ -204,24 +204,66 @@
          <!-- 添加 data-ride="carousel" 和 data-interval 设置自动播放 -->
          <div id="main-carousel" class="carousel slide" data-ride="carousel" data-interval="3000">
             <div class="carousel-inner">
-               <div class="item active">
-                  <img src="files/Photo1.jpg" class="carousel-image" alt="">
-                  <div class="carousel-caption">
-                     <p>2022 Farewell Lunch</p>
-                  </div>
-               </div>
-               <div class="item">
-                  <img src="files/Photo2.png" class="carousel-image" alt="">
-                  <div class="carousel-caption">
-                     <p>2022 Team meeting</p>
-                  </div>
-               </div>
-               <div class="item">
-                  <img src="files/ICPhS 2023.jpg" class="carousel-image" alt="">
-                  <div class="carousel-caption">
-                     <p>ICPhS 2023 at Prague</p>
-                  </div>
-               </div>
+                <div class="item active">
+                    <img src="files/Photo1.jpg" class="carousel-image" alt="">
+                    <div class="carousel-caption">
+                        <h4>2022 Farewell Lunch</h4>
+                    </div>
+                </div>
+                <div class="item">
+                    <img src="files/Photo2.png" class="carousel-image" alt="">
+                    <div class="carousel-caption">
+                        <h4>2022 Team meeting</h4>
+                    </div>
+                </div>
+                <div class="item">
+                    <img src="files/ICPhS 2023.jpg" class="carousel-image" alt="">
+                    <div class="carousel-caption">
+                        <h4>ICPhS 2023 at Prague</h4>
+                    </div>
+                </div>
+                <div class="item">
+                    <img src="files/IMG_3902.jpg" class="carousel-image" alt="">
+                    <div class="carousel-caption">
+                        <h4>2023 Gathering</h4>
+                    </div>
+                </div>
+                <div class="item">
+                    <img src="files/Photo_TAI2023.jpeg" class="carousel-image" alt="">
+                    <div class="carousel-caption">
+                        <h4>TAI 2023 at Singapore</h4>
+                    </div>
+                </div>
+                <div class="item">
+                    <img src="files/Photo_AmLap.jpeg" class="carousel-image" alt="">
+                    <div class="carousel-caption">
+                        <h4>AMLaP Asia 2023 at CUHK</h4>
+                    </div>
+                </div>
+                <div class="item">
+                    <img src="files/Photo_2024 Spring gathering.jpg" class="carousel-image" alt="">
+                    <div class="carousel-caption">
+                        <h4>2024 Spring Gathering</h4>
+                    </div>
+                </div>
+                <div class="item">
+                    <img src="files/Photo_186th Meeting of ASA in Canada.jpg" class="carousel-image" alt="">
+                    <div class="carousel-caption">
+                        <h4>186th Meeting of ASA in Canada 2024</h4>
+                    </div>
+                </div>
+                <div class="item">
+                    <img src="files/Photo_Yuqi's MPhil thesis defense.jpg" class="carousel-image" alt="">
+                    <div class="carousel-caption">
+                        <h4>2024 Yuqi's MPhil thesis defense</h4>
+                    </div>
+                </div>
+                <div class="item">
+                    <img src="files/SNL 2024 in Brisbane.jpg" class="carousel-image" alt="">
+                    <div class="carousel-caption">
+                        <h4>SNL 2024 in Brisbane</h4>
+                    </div>
+                </div>
                <!-- 其他项目继续... -->
             </div>
             <a class="left carousel-control" href="#main-carousel" data-slide="prev">‹</a>
