--- a/people.html
+++ b/people.html
@@ -207,61 +207,67 @@
                 <div class="item active">
                     <img src="files/Photo1.jpg" class="carousel-image" alt="">
                     <div class="carousel-caption">
-                        <h4>2022 Farewell Lunch</h4>
+                        <p>2022 Farewell Lunch</p>
                     </div>
                 </div>
                 <div class="item">
                     <img src="files/Photo2.png" class="carousel-image" alt="">
                     <div class="carousel-caption">
-                        <h4>2022 Team meeting</h4>
+                        <p>2022 Team meeting</p>
                     </div>
                 </div>
                 <div class="item">
                     <img src="files/ICPhS 2023.jpg" class="carousel-image" alt="">
                     <div class="carousel-caption">
-                        <h4>ICPhS 2023 at Prague</h4>
+                        <p>ICPhS 2023 at Prague</p>
                     </div>
                 </div>
                 <div class="item">
                     <img src="files/IMG_3902.jpg" class="carousel-image" alt="">
                     <div class="carousel-caption">
-                        <h4>2023 Gathering</h4>
+                        <p>2023 Gathering</p>
                     </div>
                 </div>
                 <div class="item">
                     <img src="files/Photo_TAI2023.jpeg" class="carousel-image" alt="">
                     <div class="carousel-caption">
-                        <h4>TAI 2023 at Singapore</h4>
+                        <p>TAI 2023 at Singapore</p>
                     </div>
                 </div>
                 <div class="item">
                     <img src="files/Photo_AmLap.jpeg" class="carousel-image" alt="">
                     <div class="carousel-caption">
-                        <h4>AMLaP Asia 2023 at CUHK</h4>
+                        <p>AMLaP Asia 2023 at CUHK</p>
                     </div>
                 </div>
                 <div class="item">
                     <img src="files/Photo_2024 Spring gathering.jpg" class="carousel-image" alt="">
                     <div class="carousel-caption">
-                        <h4>2024 Spring Gathering</h4>
+                        <p>2024 Spring Gathering</p>
                     </div>
                 </div>
                 <div class="item">
                     <img src="files/Photo_186th Meeting of ASA in Canada.jpg" class="carousel-image" alt="">
                     <div class="carousel-caption">
-                        <h4>186th Meeting of ASA in Canada 2024</h4>
+                        <p>186th Meeting of ASA in Canada 2024</p>
                     </div>
                 </div>
                 <div class="item">
                     <img src="files/Photo_Yuqi's MPhil thesis defense.jpg" class="carousel-image" alt="">
                     <div class="carousel-caption">
-                        <h4>2024 Yuqi's MPhil thesis defense</h4>
+                        <p>2024 Yuqi's MPhil thesis defense</p>
                     </div>
                 </div>
                 <div class="item">
                     <img src="files/SNL 2024 in Brisbane.jpg" class="carousel-image" alt="">
                     <div class="carousel-caption">
-                        <h4>SNL 2024 in Brisbane</h4>
+                        <p>SNL 2024 in Brisbane</p>
+                    </div>
+                </div>
+                <div class="item">
+                    <img src="files/AMLaP Asia 2024 in Singapore.jpg" class="carousel-image" alt="">
+                    <div class="carousel-caption">
+                        <p>AMLaP Asia 2024 in Singapore</p>
                     </div>
                 </div>
                <!-- 其他项目继续... -->
