--- a/people.html
+++ b/people.html
@@ -270,6 +270,14 @@
                         <p>AMLaP Asia 2024 in Singapore</p>
                     </div>
                 </div>
+		<div class="item">
+		    <div style="position: relative; display: inline-block; width: 70%; height: auto;">
+		        <img style="height: 60%; width: 100%;" src="files/AMLaP Asia 2024 in Singapore.png" class="carousel-image" alt="">
+		        <div class="carousel-caption" style="position: absolute; bottom: 0; width: 100%; background-color: rgba(0, 0, 0, 0.7); color: white; text-align: center; padding: 10px;">
+		            <p>AMLaP Asia 2024 in Singapore</p>
+		        </div>
+		    </div>
+		</div>
                <!-- 其他项目继续... -->
             </div>
             <a class="left carousel-control" href="#main-carousel" data-slide="prev">‹</a>
