--- a/people.html
+++ b/people.html
@@ -270,10 +270,13 @@
                         <p>AMLaP Asia 2024 in Singapore</p>
                     </div>
                 </div>
-		<div class="item">
-		    <div style="position: relative; display: inline-block; width: 70%; height: auto;">
-		        <img style="height: 60%; width: 100%;" src="files/AMLaP Asia 2024 in Singapore.png" class="carousel-image" alt="">
-		        <div class="carousel-caption" style="position: absolute; bottom: 0; width: 100%; background-color: rgba(0, 0, 0, 0.7); color: white; text-align: center; padding: 10px;">
+		<div class="item" style="display: flex; justify-content: center; align-items: center; flex-direction: column;">
+		    <div style="position: relative; width: 70%; height: auto; text-align: left;">
+		        <img style="height: auto; width: 100%; display: block; margin: 0 auto;" 
+		             src="files/AMLaP Asia 2024 in Singapore.png" class="carousel-image" alt="">
+		        <div class="carousel-caption" 
+		             style="position: absolute; bottom: 0; width: 100%; background-color: rgba(0, 0, 0, 0.7); 
+		                    color: white; text-align: left; padding: 10px;">
 		            <p>AMLaP Asia 2024 in Singapore</p>
 		        </div>
 		    </div>
