--- a/people.html
+++ b/people.html
@@ -270,17 +270,18 @@
                         <p>AMLaP Asia 2024 in Singapore</p>
                     </div>
                 </div>
-		<div class="item" style="display: flex; justify-content: center; align-items: center; flex-direction: column;">
-		    <div style="position: relative; width: 70%; height: auto; text-align: left;">
-		        <img style="height: auto; width: 100%; display: block; margin: 0 auto;" 
-		             src="files/AMLaP Asia 2024 in Singapore.png" class="carousel-image" alt="">
-		        <div class="carousel-caption" 
-		             style="position: absolute; bottom: 0; width: 100%; background-color: rgba(0, 0, 0, 0.7); 
-		                    color: white; text-align: left; padding: 10px;">
-		            <p>AMLaP Asia 2024 in Singapore</p>
-		        </div>
-		    </div>
-		</div>
+                <div class="item">
+                    <!-- Keep this one properly formatted -->
+                    <div style="position: relative; display: flex; justify-content: center; align-items: center; flex-direction: column;">
+                        <img style="height: auto; width: 70%; margin: 0 auto;" 
+                             src="files/AMLaP Asia 2024 in Singapore.png" class="carousel-image" alt="">
+                        <div class="carousel-caption" 
+                             style="position: absolute; bottom: 0; width: 100%; background-color: rgba(0, 0, 0, 0.7); 
+                                    color: white; text-align: left; padding: 10px;">
+                            <p>AMLaP Asia 2024 in Singapore</p>
+                        </div>
+                    </div>
+                </div>
                <!-- 其他项目继续... -->
             </div>
             <a class="left carousel-control" href="#main-carousel" data-slide="prev">‹</a>
