--- a/people.html
+++ b/people.html
@@ -273,10 +273,10 @@
                 <div class="item">
                     <!-- Keep this one properly formatted -->
                     <div style="position: relative; display: flex; justify-content: center; align-items: center; flex-direction: column;">
-                        <img style="height: 70%; width: auto; margin: 0 auto;" 
+                        <img style="height: 50%; width: auto; margin: 0 auto;" 
                              src="files/AMLaP Asia 2024 in Singapore.png" class="carousel-image" alt="">
                         <div class="carousel-caption" 
-                             style="position: absolute; bottom: 0; width: 70%; background-color: rgba(0, 0, 0, 0.7); 
+                             style="position: absolute; bottom: 0; width: auto; background-color: rgba(0, 0, 0, 0.7); 
                                     color: white; text-align: left; padding: 10px;">
                             <p>AMLaP Asia 2024 in Singapore</p>
                         </div>
