--- a/people.html
+++ b/people.html
@@ -265,7 +265,7 @@
                     </div>
                 </div>
                 <div class="item">
-                    <img src="files/AMLaP Asia 2024 in Singapore.png" class="carousel-image" alt="">
+                    <img src="files/AMLaP Asia 2024 in Singapore.jpg" class="carousel-image" alt="">
                     <div class="carousel-caption">
                         <p>AMLaP Asia 2024 in Singapore</p>
                     </div>
