--- a/publications.html
+++ b/publications.html
@@ -203,6 +203,7 @@
 	    <h3>Journal Articles</h3>
 	  </div>
 	  <ol> 
+	    <li class="publication">Liu, K., Liang, L., & Qin, Q. Z. (2024). The role of acoustic cues in the checked-unchecked tone merging of the Qixian Jin dialect. JASA Express Letters, 4, 125202. <a href="Liu, K., Liang, L., & Qin, Q. Z. (2024). The role of acoustic cues in the checked-unchecked tone merging of the Qixian Jin dialect. JASA Express Letters, 4, 125202." target="_blank">Link</a></li>
 	    <li class="publication">Qin, Z., Jin, R., & Wu, R. (preprint). The role of prior knowledge in second-language learners' overnight consolidation of Cantonese tones. Available at SSRN: <a href="https://ssrn.com/abstract=4978553" target="_blank">Link</a></li>
 	    <li class="publication">Qin, Z., Lee-Kim, S-I., & Qi, H. (in press). The effect of second-language learning experience on Korean listeners’ use of pitch cues in the perception of Cantonese tones. <em>Second Language Research</em>. <a href="https://doi.org/10.1177/02676583241244604" target="_blank">Link</a> [<a href="https://drive.google.com/file/d/1ZPt5FR9MvQVQM0GYkVkuy6fXWV8vG4OH/view" target="_blank">PDF</a>, open access]</li>
 	    <li class="publication">Qin, Z., & Zhang, J. W. (in press). The role of coarticulatory tonal information in Cantonese spoken word recognition: an eye-tracking study. <em>Linguistics Vanguard</em>. <a href="https://doi.org/10.1515/lingvan-2022-0158">Link</a> [<a href="https://drive.google.com/file/d/1dmptM2dGs8x_eNhV32MK1wYeZLaoo4UK/view" target="_blank">PDF</a>, open access]</li>
