--- a/people.html
+++ b/people.html
@@ -287,6 +287,7 @@
       if (width < 768) { // 小屏幕
          container.style.width = '90%';
          container.style.height = 'auto';
+         container.style.fontSize = '14px';
       } else { // 大屏幕
          container.style.width = '60%';
          container.style.height = '60%';
