--- a/facilities.html
+++ b/facilities.html
@@ -249,7 +249,7 @@
                         <img src="files/facilities_F3.jpg" class="img-3" alt="Facility 3">
 		        <div class="text-3">
                            <p style="margin-top: 10px; font-size: 24px">Eye-tracking room</p>
-				<li>Eyelink Portable Duo (Rm 3302)</li>
+				<li>Eyelink Portable Duo (SHSS Eye-tracking Lab)</li>
                         </div>
                     </div>
 		 
