--- a/facilities.html
+++ b/facilities.html
@@ -351,7 +351,7 @@
 			      <li class="publication">2 testing desktop computers</li>
 			      <li class="publication">2 work/data analysis computers</li>
 			      <li class="publication"><a href="https://compumedicsneuroscan.com/applications/eeg/" target="_blank">Neuroscan EEG system (64CH)</a></li>
-			      <li class="publication"><a href="https://www.sr-research.com/eyelink-portable-duo/" target="_blank">EyeLink Portable Duo</a> (Rm 3302)</li>
+			      <li class="publication"><a href="https://www.sr-research.com/eyelink-portable-duo/" target="_blank">EyeLink Portable Duo</a> (SHSS Eye-tracking Lab)</li>
 			      <li class="publication"><a href="https://www.grason-stadler.com/products/audiometers/gsi-audiometer-pro" target="_blank">Clinical Audiometer (GSI 18 model of Grason-Stadler)</a></li>
 			      <li class="publication"><a href="https://tascam.com/int/product/dr-44wl/top/" target="_blank">Tascam DR-44WL Handheld Recorder with Wi-Fi</a></li>
 			      <li class="publication">1 laptop computer</li>
