--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
                           </p>
                           <p>
                               Mandarin-speaking Students Wanted —> 
-                              <a href="files/Eye-tracking_Poster_updated.pdf" target="_blank">Stress Project</a> & <a href="files/.jpg" target="_blank">CSWL Project</a>
+                              <a href="files/Eye-tracking_Poster_updated.pdf" target="_blank">Stress Project</a> & <a href="files/CSWL recruitment poster.pdf" target="_blank">CSWL Project</a>
                           </p>
                       </div>
                       <!-- Image Content -->
