--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
                               Recent evidence shows that sleep plays a crucial role in transforming newly acquired linguistic knowledge into long-term memory. Given unique characteristics of lexical tones (e.g., high talker-variability of pitch), there is still a vast unexplored area in sleep-mediated memory consolidation of tone learning. By combining behavioral experiments and brain imaging technologies (e.g., EEG), we are dedicated to exploring the relationship between sleep and tone learning, providing memory-based insights for cross-language and cross-age learning of lexical tones.
                           </p>
                           <p>
-                              English Participants Wanted —> 
+                              English-speaking/South Asian Participants Wanted —> 
                               <a href="files/Exp7_poster_UST.png" target="_blank">Nap Project</a> & <a href="files/Exp_Eng_Poster.jpg" target="_blank">Sleep Project</a>
                           </p>
                       </div>
