--- a/publications.html
+++ b/publications.html
@@ -200,7 +200,7 @@
 	    <h4>Publications</h4>
 	  </div>
 	  <div class="page-header">
-	    <h3>Journal Articles <span style="font-weight: normal;">(* = student leading author)</span></h3>
+	    <h3>Journal Articles <span style="font-weight: normal; font-size: 20px;">(* = student leading author)</span></h3>
 	  </div>
 	  <ol> 
 	    <li class="publication">Qin, Z., Jin, R., & Wu, R. (preprint). The role of prior knowledge in second-language learners' overnight consolidation of Cantonese tones. Available at SSRN: <a href="https://ssrn.com/abstract=4978553" target="_blank">https://ssrn.com/abstract=4978553</a> or <a href="http://dx.doi.org/10.2139/ssrn.4978553" target="_blank">http://dx.doi.org/10.2139/ssrn.4978553</a></li>
