--- a/media.html
+++ b/media.html
@@ -236,6 +236,7 @@
 			    <li class="publication">Research Center for Language, Cognition, and Neuroscience, PolyU [<a href="https://www.polyu.edu.hk/cbs/rclcn/" target="_blank">Link</a>]</li>
 			    <li class="publication">Social & Cognitive Neuroscience Laboratory, HKU [<a href="https://www.psychology.hku.hk/scnlab/home.html" target="_blank">Link</a>]</li>
 			    <li class="publication">Neurocognition of Language, Music and Learning Lab, PolyU [<a href="https://drcczlab.github.io/index.html" target="_blank">Link</a>]</li>
+			    <li class="publication">Bilingual Speech Lab, The University of Texas at El Paso [<a href="https://sites.google.com/view/utepbilingualspeechlab/" target="_blank">Link</a>]</li>
 			  </ol>
 
 		 <hr>
