--- a/media.html
+++ b/media.html
@@ -249,7 +249,7 @@
          	 </div>
 		<div class="row-fluid">
   	 	  <div class="span3">
-   		   <img src="files/Media 7.jpg" alt="media_nap.jpg" />
+   		   <img src="files/Media 7.png" alt="media_nap.jpg" />
   		  </div>
    		 <div class="span9">
    		   <p><a href="https://ssc.hkust.edu.hk/projects/empowering-our-community-for-positive-change/staying-smart-by-taking-a-nap" style="color: #515151;"><b>[Jan 2025] Staying Smart by Taking a Nap</a></b></p>
