--- a/index.html
+++ b/index.html
@@ -250,6 +250,7 @@
                   <br>
                   <div style="max-height: 200px; overflow-y: auto; border: 0.8px solid #ccc; padding: 10px;">
                       <ol>
+                          <li>12/02/2025 Our team member Jeremy Yinto CHUI was admitted to the <a href="https://www.westernsydney.edu.au/marcs/engage_with_us/international_visiting_scholar_program_2025" target="_blank">International Visiting Scholar Program</a> at MARCS. Congrats!</li>
                           <li>24/12/2024 Our study "<a href="https://doi.org/10.1121/10.0034717" target="_blank">Individual differences in the distributional learning and overnight consolidation of the Mandarin level-falling tone contrast</a>" is published in Journal of the Acoustical Society of America.</li>	
                           <li>12/12/2024 Our study "<a href="https://pubs.aip.org/asa/jel/article/4/12/125202/3325440/The-role-of-acoustic-cues-in-the-checked-unchecked" target="_blank">The role of acoustic cues in the checked-unchecked tone merging of the Qixian Jin dialect</a>" is published in JASA Express Letters.</li>	
                           <li>25/11/2024 Dr. Quentin QIN gave a talk at <a href="https://aging.hkust.edu.hk/events/research-back-back-seminar-series-6" target="_blank">Research Back to Back Seminar Series</a>, HKUST.</li>	
