--- a/index.html
+++ b/index.html
@@ -250,6 +250,7 @@
                   <br>
                   <div style="max-height: 200px; overflow-y: auto; border: 0.8px solid #ccc; padding: 10px;">
                       <ol>
+                          <li>27/02/2025 Dr. Quentin QIN will give a talk at <a href="https://iems.ust.hk/events/academic-seminar/2025/quentin-zhen-qin-what-strategies-reinforce-memory-consolidation-of-older-chinese-adults" target="_blank">HKUST IEMS</a>. Please sign up if you’re interested in attending!</li>	
                           <li>12/02/2025 Our team member Jeremy Yinto CHUI was admitted to the <a href="https://www.westernsydney.edu.au/marcs/engage_with_us/international_visiting_scholar_program_2025" target="_blank">International Visiting Scholar Program</a> at MARCS. Congrats!</li>
                           <li>24/12/2024 Our study "<a href="https://doi.org/10.1121/10.0034717" target="_blank">Individual differences in the distributional learning and overnight consolidation of the Mandarin level-falling tone contrast</a>" is published in Journal of the Acoustical Society of America.</li>	
                           <li>12/12/2024 Our study "<a href="https://pubs.aip.org/asa/jel/article/4/12/125202/3325440/The-role-of-acoustic-cues-in-the-checked-unchecked" target="_blank">The role of acoustic cues in the checked-unchecked tone merging of the Qixian Jin dialect</a>" is published in JASA Express Letters.</li>	
