--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
                   <br>
                   <div style="max-height: 200px; overflow-y: auto; border: 0.8px solid #ccc; padding: 10px;">
                       <ol>
-                          <li>05/03/2025 Congrats to Yuqi Wang, whose abstract with Jiayu Liang and Quentin Qin was accepted as a talk at the <a href="https://www.bcbl.eu/events/isb15/en/" target="_blank">15th international symposium on Bilingualism</a> in Donostia-San Sebastián.</li>
+                          <li>05/03/2025 Congrats to Yuqi Wang, whose abstract with Jiayu Liang and Dr. Quentin Qin was accepted as a talk at the <a href="https://www.bcbl.eu/events/isb15/en/" target="_blank">15th International Symposium on Bilingualism</a> in Donostia-San Sebastián.</li>
                           <li>05/03/2025 Kangdi Liu will give a talk on "<a href="files/Media 8.png" target="_blank">The role of acoustic cues in the checked-unchecked tone merging of the Qixian Jin dialect</a>" at Elinguistics. Please join the webinar if you’re interested!</li>
                           <li>27/02/2025 Dr. Quentin QIN will give a talk on "What Strategies Reinforce Memory Consolidation of Older Chinese Adults?" at HKUST IEMS (See <a href="https://iems.ust.hk/events/academic-seminar/2025/quentin-zhen-qin-what-strategies-reinforce-memory-consolidation-of-older-chinese-adults" target="_blank">here</a> for details). Please sign up if you’re interested in attending!</li>	
                           <li>12/02/2025 Our team member Jeremy Yinto CHUI was admitted to the International Visiting Scholar Program at <a href="https://www.westernsydney.edu.au/marcs" target="_blank">MARCS institute</a>. Congrats!</li>
