--- a/index.html
+++ b/index.html
@@ -234,17 +234,72 @@
                                     </p>
                                 </div>
                             </div>
-                            <!-- Image Content -->
-                            <div class="image-content" style="flex: 2;">
-                                <img src="files/Photo_Homepage.jpg" class="large-img" alt="Photo Homepage">
-                            </div>
+
+                           
+                           <div class="container" id="carousel-container" style="width: 60%; height: 60%; margin: 0 auto;">
+                              <!-- 轮播图 -->
+                              <div class="row-fluid">
+                                 <div class="span10">
+                                    <!-- 添加 data-ride="carousel" 和 data-interval 设置自动播放 -->
+                                    <div id="main-carousel" class="carousel slide" data-ride="carousel" data-interval="3000">
+                                       <div class="carousel-inner">
+                                           <div class="item active">
+                                               <img src="files/Photo_Homepage.jpg" class="carousel-image" alt="">
+                                           </div>
+                                           <div class="item">
+                                               <img src="files/2025spring_talk.jpg" class="carousel-image" alt="">
+                                               <div class="carousel-caption">
+                                                   <p>Incoming Talk</p>
+                                               </div>
+                                           </div>
+                                          <!-- 其他项目继续... -->
+                                       </div>
+                                       <a class="left carousel-control" href="#main-carousel" data-slide="prev">‹</a>
+                                       <a class="right carousel-control" href="#main-carousel" data-slide="next">›</a>
+                                    </div>
+                                 </div>
+                              </div>
+                           </div>
+
                         </div>
                     </div>
                 </div>
             </div>
       </body>
 </html>
+<script>
+   function adjustCarouselSize() {
+      const container = document.getElementById('carousel-container');
+      const captions = document.querySelectorAll('#carousel-container .carousel-caption p'); // 选择所有标题元素
+      const width = window.innerWidth;
+
+      if (width < 768) { // 小屏幕
+         container.style.width = '90%';
+         container.style.height = 'auto';
+
+         // 修改标题字体大小
+         captions.forEach(caption => {
+            caption.style.fontSize = '14px'; // 小屏幕标题字体大小
+         });
+      } else { // 大屏幕
+         container.style.width = '60%';
+         container.style.height = '60%';
+
+         // 恢复标题字体大小
+         captions.forEach(caption => {
+            caption.style.fontSize = '18px'; // 大屏幕标题字体大小
+         });
+      }
+   }
+
+   // 页面加载和窗口大小变化时动态调整
+   window.addEventListener('DOMContentLoaded', adjustCarouselSize);
+   window.addEventListener('resize', adjustCarouselSize);
+</script>
 <hr>
+
+                           
+
              <div class="section">
                   <h4>News and Events</h4>
                   <br>
