--- a/index.html
+++ b/index.html
@@ -296,6 +296,7 @@
    window.addEventListener('DOMContentLoaded', adjustCarouselSize);
    window.addEventListener('resize', adjustCarouselSize);
 </script>
+</div>
 <hr>
 
                            
