--- a/media.html
+++ b/media.html
@@ -252,7 +252,7 @@
    		   <img src="files/IMES_talk.png" alt="media_nap.jpg" />
   		  </div>
    		 <div class="span9">
-   		   <p><a href="https://iems.ust.hk/publications/thought-leadership-briefs/language-learning-by-ageing-populations-from-emerging-markets-an-empirical-study-in-china" style="color: #515151;"><b>[Mar 2025] Quentin Qin's talk on Language Learning by Ageing Populations from Emerging Markets: an Empirical Study in China</a></b></p>
+   		   <p><a href="https://iems.ust.hk/publications/thought-leadership-briefs/language-learning-by-ageing-populations-from-emerging-markets-an-empirical-study-in-china" style="color: #515151;"><b>[Mar 2025] Quentin Qin's talk on "What Strategies Reinforce Memory Consolidation of Older Chinese Adults?"</a></b></p>
     		  <i><a href="https://iems.ust.hk/home" style="color: #515151;">IEMS, HKUST</a></i>
     		 </div>
  		 </div>
