--- a/media.html
+++ b/media.html
@@ -249,7 +249,7 @@
          	 </div>
 		<div class="row-fluid">
   	 	  <div class="span3">
-   		   <img src="files/IMES_talk.png" alt="media_nap.jpg" />
+   		   <img src="files/RPG_workshop.jpg" alt="media_nap.jpg" />
   		  </div>
    		 <div class="span9">
    		   <p><a href="https://iems.ust.hk/publications/thought-leadership-briefs/language-learning-by-ageing-populations-from-emerging-markets-an-empirical-study-in-china" style="color: #515151;"><b>[Mar 2025] Quentin Qin's talk on "What Strategies Reinforce Memory Consolidation of Older Chinese Adults?"</a></b></p>
