--- a/media.html
+++ b/media.html
@@ -249,11 +249,11 @@
          	 </div>
 		<div class="row-fluid">
   	 	  <div class="span3">
-   		   <img src="files/IMES_talk.png" alt="media_nap.jpg" />
+   		   <img src="files/IMES_brief.png" alt="media_nap.jpg" />
   		  </div>
    		 <div class="span9">
-   		   <p><a href="https://iems.ust.hk/publications/thought-leadership-briefs/language-learning-by-ageing-populations-from-emerging-markets-an-empirical-study-in-china" style="color: #515151;"><b>[Mar 2025] Quentin Qin's talk on "What Strategies Reinforce Memory Consolidation of Older Chinese Adults?"</a></b></p>
-    		  <i><a href="https://iems.ust.hk/home" style="color: #515151;">IEMS, HKUST</a></i>
+   		   <p><a href="https://iems.ust.hk/publications/thought-leadership-briefs/language-learning-by-ageing-populations-from-emerging-markets-an-empirical-study-in-china" style="color: #515151;"><b>[Mar 2025] A Thought Leadership Brief based on our aging and memory consolidation project</a></b> <a href="files/hkustiems-tlb92-language-learning-by-ageing-populations.pdf" style="color: #515151;">[PDF]</a></p>
+    		  <i><a href="https://iems.ust.hk/home" style="color: #515151;">Institute for Emerging Market Studies, HKUST</a></i>
     		 </div>
  		 </div>
 		 <hr>
@@ -263,7 +263,7 @@
    		   <img src="files/Media 7.png" alt="media_nap.jpg" />
   		  </div>
    		 <div class="span9">
-   		   <p><a href="https://ssc.hkust.edu.hk/projects/empowering-our-community-for-positive-change/staying-smart-by-taking-a-nap" style="color: #515151;"><b>[Jan 2025] Staying Smart by Taking a Nap</a></b></p>
+   		   <p><a href="https://ssc.hkust.edu.hk/projects/empowering-our-community-for-positive-change/staying-smart-by-taking-a-nap" style="color: #515151;"><b>[Jan 2025] Staying Smart by Taking a Nap</a></b> <a href="https://youtu.be/4SkwHmBTnSM" target="_blank" style="color: #515151;">[Video Link]</a></p>
     		  <i><a href="https://ssc.hkust.edu.hk/" style="color: #515151;">Sustainable Smart Campus as a Living Lab, HKUST</a></i>
     		 </div>
  		 </div>
