--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
              <div class="section">
                   <h4>News and Events</h4>
                   <br>
-                  <div style="max-height: 200px; overflow-y: auto; border: 0.8px solid #ccc; padding-left: -10px; padding-right: 10px;">
+                  <div style="max-height: 200px; overflow-y: auto; border: 0.8px solid #ccc; padding-left: 0px; padding-right: 10px; margin-left: -10px;">
                       <ol>
                           <li>03/04/2025 Our team member Jeremy Yinto CHUI was awarded the <a href="https://fytgs.hkust.edu.hk/admissions/Admission-to-Hong-Kong-Campus/submitting-an-application/scholarships-and-fees#redbird">RedBird Academic Excellence Award for Continuing PhD students</a> in the 2024/25 Academic Year. Congrats!</li>	   
                           <li>26/03/2025 Our lab is co-hosting <a href="https://huma.hkust.edu.hk/events/investigating-accented-speech-perception-tonal-languages" target="_blank">an upcoming talk by Prof. Eric Pelzl</a> with the Center for Chinese Linguistics on April 24, 2025—join us!</li>
