--- a/index.html
+++ b/index.html
@@ -304,9 +304,9 @@
              <div class="section">
                   <h4>News and Events</h4>
                   <br>
-                  <div style="max-height: 200px; overflow-y: auto; border: 0.8px solid #ccc; padding-left: 0px; padding-right: 10px; margin-left: -10px;">
+                  <div style="max-height: 200px; overflow-y: auto; border: 0.8px solid #ccc; padding: 10px;">
                       <ol>
-                          <li>03/04/2025 Our team member Jeremy Yinto CHUI was awarded the <a href="https://fytgs.hkust.edu.hk/admissions/Admission-to-Hong-Kong-Campus/submitting-an-application/scholarships-and-fees#redbird">RedBird Academic Excellence Award for Continuing PhD students</a> in the 2024/25 Academic Year. Congrats!</li>	   
+                          <li style="padding-left: 0px;">03/04/2025 Our team member Jeremy Yinto CHUI was awarded the <a href="https://fytgs.hkust.edu.hk/admissions/Admission-to-Hong-Kong-Campus/submitting-an-application/scholarships-and-fees#redbird">RedBird Academic Excellence Award for Continuing PhD students</a> in the 2024/25 Academic Year. Congrats!</li>	   
                           <li>26/03/2025 Our lab is co-hosting <a href="https://huma.hkust.edu.hk/events/investigating-accented-speech-perception-tonal-languages" target="_blank">an upcoming talk by Prof. Eric Pelzl</a> with the Center for Chinese Linguistics on April 24, 2025—join us!</li>
                           <li>14/03/2025 Our study "<a href="https://www.sciencedirect.com/science/article/pii/S0093934X25000379?via%3Dihub" target="_blank">Daytime naps consolidate Cantonese tone learning through promoting cross-talker perception: The role of prior knowledge</a>" is published in Brain and Language. Congrats!</li>
                           <li>05/03/2025 Congrats to Yuqi Wang, whose abstract with Jiayu Liang and Dr. Quentin Qin was accepted as a talk at the <a href="https://www.bcbl.eu/events/isb15/en/" target="_blank">15th International Symposium on Bilingualism</a> in Donostia-San Sebastián.</li>
