--- a/index.html
+++ b/index.html
@@ -306,6 +306,7 @@
                   <br>
                   <div style="max-height: 200px; overflow-y: auto; border: 0.8px solid #ccc; padding: 10px;">
                       <ol>
+                          <li style="margin-left: -40px;"><strong>[Award]</strong> 15/04/2025 Our team member Kangdi LIU was awarded the prestigious <a href="https://cerg1.ugc.edu.hk/hkpfs/index.html" target="_blank">Hong Kong PhD Fellowship</a>. Congrats!</li>	
                           <li style="margin-left: -40px;"><strong>[Award]</strong> 03/04/2025 Our team member Jeremy Yinto CHUI was awarded the <a href="https://fytgs.hkust.edu.hk/admissions/Admission-to-Hong-Kong-Campus/submitting-an-application/scholarships-and-fees#redbird">RedBird Academic Excellence Award for Continuing PhD students</a> in the 2024/25 Academic Year. Congrats!</li>	   
                           <li style="margin-left: -40px;"><strong>[Invited Talk]</strong> 26/03/2025 Our lab is co-hosting <a href="https://huma.hkust.edu.hk/events/investigating-accented-speech-perception-tonal-languages" target="_blank">an upcoming talk by Prof. Eric Pelzl</a> with the Center for Chinese Linguistics on April 24, 2025—join us!</li>
                           <li style="margin-left: -40px;"><strong>[Publication]</strong> 14/03/2025 Our study "<a href="https://www.sciencedirect.com/science/article/pii/S0093934X25000379?via%3Dihub" target="_blank">Daytime naps consolidate Cantonese tone learning through promoting cross-talker perception: The role of prior knowledge</a>" is published in Brain and Language. Congrats!</li>
