--- a/index.html
+++ b/index.html
@@ -236,30 +236,10 @@
                             </div>
 
                            
-                           <div class="container" id="carousel-container" style="width: 60%; height: 60%; margin: 0 auto;">
-                              <!-- 轮播图 -->
-                              <div class="row-fluid">
-                                 <div class="span10">
-                                    <!-- 添加 data-ride="carousel" 和 data-interval 设置自动播放 -->
-                                    <div id="main-carousel" class="carousel slide" data-ride="carousel" data-interval="3000">
-                                       <div class="carousel-inner">
-                                           <div class="item active">
-                                               <img src="files/Photo_Homepage.jpg" class="carousel-image" alt="">
-                                           </div>
-                                           <div class="item">
-                                               <img src="files/2025spring_talk.jpg" class="carousel-image" alt="">
-                                               <div class="carousel-caption">
-                                                   <p>Incoming Talk</p>
-                                               </div>
-                                           </div>
-                                          <!-- 其他项目继续... -->
-                                       </div>
-                                       <a class="left carousel-control" href="#main-carousel" data-slide="prev">‹</a>
-                                       <a class="right carousel-control" href="#main-carousel" data-slide="next">›</a>
-                                    </div>
-                                 </div>
-                              </div>
-                           </div>
+                            <!-- Image Content -->
+                            <div class="image-content" style="flex: 2;">
+                                <img src="files/Photo_Homepage.jpg" class="large-img" alt="Photo Homepage">
+                            </div>
 
                         </div>
                     </div>
