--- a/index.html
+++ b/index.html
@@ -286,6 +286,7 @@
                   <br>
                   <div style="max-height: 200px; overflow-y: auto; border: 0.8px solid #ccc; padding: 10px;">
                       <ol>
+                          <li style="margin-left: -40px;"><strong>[Award]</strong> 12/05/2025 Our team members Jeremy, Yuqi and Kangdi will give oral presentations at  <a href="https://events.polyu.edu.hk/jpss2025/home" target="_blank">Joint Postgraduate Student Symposium</a>. Congrats!</li>	   
                           <li style="margin-left: -40px;"><strong>[Award]</strong> 15/04/2025 Our team member Kangdi LIU was awarded the prestigious <a href="https://cerg1.ugc.edu.hk/hkpfs/index.html" target="_blank">Hong Kong PhD Fellowship</a>. Congrats!</li>	
                           <li style="margin-left: -40px;"><strong>[Award]</strong> 03/04/2025 Our team member Jeremy Yinto CHUI was awarded the <a href="https://fytgs.hkust.edu.hk/admissions/Admission-to-Hong-Kong-Campus/submitting-an-application/scholarships-and-fees#redbird">RedBird Academic Excellence Award for Continuing PhD students</a> in the 2024/25 Academic Year. Congrats!</li>	   
                           <li style="margin-left: -40px;"><strong>[Invited Talk]</strong> 26/03/2025 Our lab is co-hosting <a href="https://huma.hkust.edu.hk/events/investigating-accented-speech-perception-tonal-languages" target="_blank">an upcoming talk by Prof. Eric Pelzl</a> with the Center for Chinese Linguistics on April 24, 2025—join us!</li>
