--- a/facilities.html
+++ b/facilities.html
@@ -348,7 +348,7 @@
 			    <h3>Hardware</h3>
 			    <ul>
 			      <li class="publication"><a href="https://www.fitbit.com/global/us/products/smartwatches/versa" target="_blank">Fitbit Versa 2 (actigraphy)</a></li>
-			      <li class="publication">2 testing desktop computers</li>
+			      <li class="publication">3 testing desktop computers</li>
 			      <li class="publication">2 work/data analysis computers</li>
 			      <li class="publication"><a href="https://compumedicsneuroscan.com/applications/eeg/" target="_blank">Neuroscan EEG system (64CH)</a></li>
 			      <li class="publication"><a href="https://www.sr-research.com/eyelink-portable-duo/" target="_blank">EyeLink Portable Duo</a> (SHSS Eyetracking Laboratory)</li>
@@ -356,6 +356,10 @@
 			      <li class="publication"><a href="https://tascam.com/int/product/dr-44wl/top/" target="_blank">Tascam DR-44WL Handheld Recorder with Wi-Fi</a></li>
 			      <li class="publication">1 laptop computer</li>
 			      <li class="publication">1 computer projector</li>
+			      <li class="publication">1 Cedrus Stim Tracker Quad with m-pod</li>
+			      <li class="publication">1 Chronos USB Response & Stimulus Device</li>
+			      <li class="publication">1 Insert Earphone</li>
+			      <li class="publication">2 Power Unit</li>
 			    </ul>
 			  </div>
 			  <div class="column">
