--- a/facilities.html
+++ b/facilities.html
@@ -354,12 +354,12 @@
 			      <li class="publication"><a href="https://www.sr-research.com/eyelink-portable-duo/" target="_blank">EyeLink Portable Duo</a> (SHSS Eyetracking Laboratory)</li>
 			      <li class="publication"><a href="https://www.grason-stadler.com/products/audiometers/gsi-audiometer-pro" target="_blank">Clinical Audiometer (GSI 18 model of Grason-Stadler)</a></li>
 			      <li class="publication"><a href="https://tascam.com/int/product/dr-44wl/top/" target="_blank">Tascam DR-44WL Handheld Recorder with Wi-Fi</a></li>
+			      <li class="publication"><a href="https://cedrus.com/stimtracker/index.htm" target="_blank">Cedrus Stim Tracker Quad with m-pod</a></li>
+			      <li class="publication"><a href="https://pstnet.com/products/chronos/" target="_blank">Chronos USB Response & Stimulus Device</a></li>
+			      <li class="publication"><a href="https://shop.neurospec.com/er3c-tubal-insert-earphones" target="_blank">Insert Earphone</a></li>
 			      <li class="publication">1 laptop computer</li>
 			      <li class="publication">1 computer projector</li>
-			      <li class="publication">1 <a href="https://cedrus.com/stimtracker/index.htm" target="_blank">Cedrus Stim Tracker Quad with m-pod</a></li>
-			      <li class="publication">1 <a href="https://pstnet.com/products/chronos/" target="_blank">Chronos USB Response & Stimulus Device</a></li>
-			      <li class="publication">1 <a href="https://shop.neurospec.com/er3c-tubal-insert-earphones" target="_blank">Insert Earphone</a></li>
-			      <li class="publication">2 Power Unit</li>
+			      <li class="publication">2 Power Units</li>
 			    </ul>
 			  </div>
 			  <div class="column">
