--- a/people.html
+++ b/people.html
@@ -276,6 +276,12 @@
                         <p>2025 Spring Gathering</p>
                     </div>
                 </div>
+                <div class="item">
+                    <img src="files/2025_spring_gathering.jpg" class="carousel-image" alt="">
+                    <div class="carousel-caption">
+                        <p>2025 Spring Final Gathering</p>
+                    </div>
+                </div>
                <!-- 其他项目继续... -->
             </div>
             <a class="left carousel-control" href="#main-carousel" data-slide="prev">‹</a>
