--- a/people.html
+++ b/people.html
@@ -282,6 +282,12 @@
                         <p>2025 Spring Final Gathering</p>
                     </div>
                 </div>
+                <div class="item">
+                    <img src="files/yuqi_ISB.jpg" class="carousel-image" alt="">
+                    <div class="carousel-caption">
+                        <p>ISB 2025 in Spain</p>
+                    </div>
+                </div>    
                <!-- 其他项目继续... -->
             </div>
             <a class="left carousel-control" href="#main-carousel" data-slide="prev">‹</a>
